# viastat

./: .env.example  .gitignore  .vercelignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
backend/: .env.example  config.py  main.py  requirements.txt
backend/routers/: brief.py  demo.py  headway.py  network.py  pipeline.py  quality.py  routes.py
backend/schemas/: models.py
backend/services/: brief.py  loader.py  metrics.py  quality.py
data/: README.md
data/bronze/: pings.parquet
data/gold/: data_quality_summary.parquet  headway_analysis.parquet  route_metrics.parquet
data/raw/: metadata.json  routes.geojson  schedule.csv  stops.csv
data/silver/: pings_clean.parquet
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  HANDOFF.md  PORTFOLIO_HANDOFF.md  SCREENSHOTS.md  TECHNICAL_DECISIONS.md  TESTING.md  assumptions.md  data-contracts.md  data-sources.md  deployment.md  methodology.md  portfolio-case-study.md
frontend/: README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: demo-path.spec.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/brief/: page.tsx
frontend/src/app/case-study/: page.tsx
frontend/src/app/headway/: page.tsx
frontend/src/lib/: api.ts  types.ts  utils.ts
scripts/: build_parquet_dataset.py  demo-proxy.js  generate_synthetic_gtfs_like_data.py
tests/backend/: test_api.py  test_services.py
tests/pipeline/: test_generator.py  test_gold.py  test_metrics.py  test_quality.py
(+17 files in other folders)
