[project]
name = "viastat"
version = "0.1.0"
description = "ViaStat / Mobilidade Auditada"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "polars>=1.18",
    "duckdb>=1.1",
    "numpy>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
